fix. Исправлен z-index в cover

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@
 }
 
 .header_menu {
-  font-family: Raleway;
   font-size: 18px;
   font-weight: 100;
   line-height: 1.16em;
@@ -53,7 +52,6 @@
 }
 
 .address {
-  font-family: Raleway;
   font-size: 18px;
   font-weight: 100;
   line-height: 1.35em;
@@ -74,7 +72,6 @@
   margin-right: 50px;
   margin-top: 95px;
   margin-bottom: 100px;
-  max-height: 98px;
   max-width: 240px;
   width: 240px;
 }
@@ -89,8 +86,8 @@
   background-repeat: no-repeat;
   position: relative;
   width: 1100px;
-  height: 757px;
-  z-index: 0;
+  min-height: 757px;
+  
 }
 
 .overlay {
@@ -99,21 +96,20 @@
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
-  z-index: -1;
+  
 }
 
 .cover__title {
   display: flex;
   flex-direction: column;
-  padding: 165px 50px 147px 50px;
+  padding: 165px 50px 107px 50px;
   color: #ffffff;
   letter-spacing: 30px;
   text-transform: uppercase;
-  font-family: Raleway;
   font-weight: 700;
   font-size: 100px;
   line-height: 1.15em;
-  height: 385px;
+  position: relative;
 }
 
 .aligned-text {
@@ -136,17 +132,17 @@
 
 .cover__description {
   width: 1000px;
-  height: 51px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 50px;
   margin-left: 50px;
+  margin-right: 50px;
+  position: relative;
 }
 
 .cover__description-text {
   color: rgb(255, 255, 255);
-  font-family: Raleway;
   font-size: 22px;
   font-weight: 400;
   line-height: 1.27em;
@@ -163,7 +159,6 @@
   height: 51px;
   border: 1px solid white;
   background-color: transparent;
-  font-family: "Raleway", sans-serif;
   color: #fff;
   font-size: 22px;
   line-height: 1.18em;
@@ -176,13 +171,13 @@
   margin-top: 180px;
   margin-left: 24px;
   margin-right: 24px;
+  margin-bottom: 120px;
 }
 
 .lots__heading {
   padding-bottom: 27px;
   padding-left: 40px;
   color: rgb(0, 0, 0);
-  font-family: Raleway;
   font-size: 40px;
   font-weight: 700;
   line-height: 1.17em;
@@ -201,7 +196,7 @@
 .lots__card-list-item {
   list-style-type: none;
   width: 334px;
-  height: 596px;
+  min-height: 596px;
 }
 
 .lots__card-list-item article {
@@ -211,6 +206,13 @@
   justify-content: space-between;
 }
 
+.card {
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 2;
+}
+
 .card-link {
   text-decoration: none;
   height: 100%;
@@ -218,26 +220,15 @@
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  z-index: -1;
+
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  z-index: -1;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  z-index: -1;
 }
 
 .card_title {
@@ -312,7 +303,6 @@
 }
 
 .about__text {
-  font-family: "Raleway", sans-serif;
   color: black;
   font-size: 20px;
   font-weight: 400;
@@ -354,7 +344,6 @@
 
 .footer__menu-list-item {
   color: rgb(0, 0, 0);
-  font-family: Raleway;
   font-size: 18px;
   font-weight: 100;
   line-height: 1.17em;
